<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerShowInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alterPrimaryLight"
    tools:context=".showInfoModule.ShowInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/common_padding_default">

            <ImageView
                android:id="@+id/imgPhotoInternal"
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:background="@android:color/darker_gray"
                android:contentDescription="@string/description_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="@dimen/common_padding_min"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/alterSecundaryLight"
                android:orientation="vertical"
                android:padding="@dimen/common_padding_min"
                android:layout_marginBottom="@dimen/common_padding_min">
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/letterSecundary"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingVertical="@dimen/common_padding_min"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="@string/title_info" />

                <TextView
                    android:id="@+id/tvDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingBottom="@dimen/common_padding_min"
                    android:text="@string/description_info"
                    android:textAppearance="?attr/textAppearanceBody1" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:justificationMode="inter_word"
                    android:paddingBottom="@dimen/common_padding_min"
                    android:singleLine="false"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:targetApi="o"
                    tools:text="@string/description_info" />

                <TextView
                    android:id="@+id/tvGeneros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/common_padding_min"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="@string/generos_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/common_padding_min">

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingEnd="@dimen/common_padding_default"
                        android:text="@string/rating_info"
                        android:textAppearance="?attr/textAppearanceBody1"
                        tools:ignore="RtlSymmetry" />

                    <RatingBar
                        android:id="@+id/rating"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:stepSize="0.1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/common_padding_min"

                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="@string/date_info" />

                <TextView
                    android:id="@+id/tvWebPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/common_padding_min"
                    android:textAppearance="?attr/textAppearanceBody1"
                    tools:text="@string/webpage_info" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTitleEpisodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingVertical="@dimen/common_padding_min"
                android:text="@string/episodes_list"
                android:textAppearance="?attr/textAppearanceSubtitle1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewEpisodes"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="@dimen/common_padding_none"
                android:paddingEnd="@dimen/common_padding_min"
                android:paddingBottom="@dimen/common_padding_min"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/item_season" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>